Fix for the form on mobile added light form font color for dark mode

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -479,7 +479,7 @@ dialog {
 
   /* NORMAL */
   --fc-border-color: #eceff9;
-  --fc-normal-text-color: #0e0b3d;
+  --fc-normal-text-color: #7f7e8a;
   --fc-normal-placeholder-color: #b3b8d0;
 
   /* PRIMARY COLOR | HSL FORMAT*/
